---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TCH008.py:15:16: TCH008 [*] Remove quotes from type alias
   |
13 |     Bar = Foo
14 | 
15 | a: TypeAlias = 'int'  # TCH008
   |                ^^^^^ TCH008
16 | b: TypeAlias = 'Dict'  # OK
17 | c: TypeAlias = 'Foo'   # TCH008
   |
   = help: Remove quotes

ℹ Safe fix
12 12 | else:
13 13 |     Bar = Foo
14 14 | 
15    |-a: TypeAlias = 'int'  # TCH008
   15 |+a: TypeAlias = int  # TCH008
16 16 | b: TypeAlias = 'Dict'  # OK
17 17 | c: TypeAlias = 'Foo'   # TCH008
18 18 | d: TypeAlias = 'Foo[str]'  # OK

TCH008.py:17:16: TCH008 [*] Remove quotes from type alias
   |
15 | a: TypeAlias = 'int'  # TCH008
16 | b: TypeAlias = 'Dict'  # OK
17 | c: TypeAlias = 'Foo'   # TCH008
   |                ^^^^^ TCH008
18 | d: TypeAlias = 'Foo[str]'  # OK
19 | e: TypeAlias = 'Foo.bar'  # OK
   |
   = help: Remove quotes

ℹ Safe fix
14 14 | 
15 15 | a: TypeAlias = 'int'  # TCH008
16 16 | b: TypeAlias = 'Dict'  # OK
17    |-c: TypeAlias = 'Foo'   # TCH008
   17 |+c: TypeAlias = Foo   # TCH008
18 18 | d: TypeAlias = 'Foo[str]'  # OK
19 19 | e: TypeAlias = 'Foo.bar'  # OK
20 20 | f: TypeAlias = 'Foo | None'  # TCH008

TCH008.py:20:16: TCH008 [*] Remove quotes from type alias
   |
18 | d: TypeAlias = 'Foo[str]'  # OK
19 | e: TypeAlias = 'Foo.bar'  # OK
20 | f: TypeAlias = 'Foo | None'  # TCH008
   |                ^^^^^^^^^^^^ TCH008
21 | g: TypeAlias = 'OptStr'   # OK
22 | h: TypeAlias = 'Bar'   # TCH008
   |
   = help: Remove quotes

ℹ Safe fix
17 17 | c: TypeAlias = 'Foo'   # TCH008
18 18 | d: TypeAlias = 'Foo[str]'  # OK
19 19 | e: TypeAlias = 'Foo.bar'  # OK
20    |-f: TypeAlias = 'Foo | None'  # TCH008
   20 |+f: TypeAlias = Foo | None  # TCH008
21 21 | g: TypeAlias = 'OptStr'   # OK
22 22 | h: TypeAlias = 'Bar'   # TCH008
23 23 | i: TypeAlias = Foo['str']   # TCH008

TCH008.py:22:16: TCH008 [*] Remove quotes from type alias
   |
20 | f: TypeAlias = 'Foo | None'  # TCH008
21 | g: TypeAlias = 'OptStr'   # OK
22 | h: TypeAlias = 'Bar'   # TCH008
   |                ^^^^^ TCH008
23 | i: TypeAlias = Foo['str']   # TCH008
24 | j: TypeAlias = 'Baz'   # OK
   |
   = help: Remove quotes

ℹ Safe fix
19 19 | e: TypeAlias = 'Foo.bar'  # OK
20 20 | f: TypeAlias = 'Foo | None'  # TCH008
21 21 | g: TypeAlias = 'OptStr'   # OK
22    |-h: TypeAlias = 'Bar'   # TCH008
   22 |+h: TypeAlias = Bar   # TCH008
23 23 | i: TypeAlias = Foo['str']   # TCH008
24 24 | j: TypeAlias = 'Baz'   # OK
25 25 | k: TypeAlias = 'k | None'  # OK

TCH008.py:23:20: TCH008 [*] Remove quotes from type alias
   |
21 | g: TypeAlias = 'OptStr'   # OK
22 | h: TypeAlias = 'Bar'   # TCH008
23 | i: TypeAlias = Foo['str']   # TCH008
   |                    ^^^^^ TCH008
24 | j: TypeAlias = 'Baz'   # OK
25 | k: TypeAlias = 'k | None'  # OK
   |
   = help: Remove quotes

ℹ Safe fix
20 20 | f: TypeAlias = 'Foo | None'  # TCH008
21 21 | g: TypeAlias = 'OptStr'   # OK
22 22 | h: TypeAlias = 'Bar'   # TCH008
23    |-i: TypeAlias = Foo['str']   # TCH008
   23 |+i: TypeAlias = Foo[str]   # TCH008
24 24 | j: TypeAlias = 'Baz'   # OK
25 25 | k: TypeAlias = 'k | None'  # OK
26 26 | 

TCH008.py:27:10: TCH008 [*] Remove quotes from type alias
   |
25 | k: TypeAlias = 'k | None'  # OK
26 | 
27 | type B = 'Dict'  # TCH008
   |          ^^^^^^ TCH008
28 | type D = 'Foo[str]'  # TCH008
29 | type E = 'Foo.bar'  # TCH008
   |
   = help: Remove quotes

ℹ Safe fix
24 24 | j: TypeAlias = 'Baz'   # OK
25 25 | k: TypeAlias = 'k | None'  # OK
26 26 | 
27    |-type B = 'Dict'  # TCH008
   27 |+type B = Dict  # TCH008
28 28 | type D = 'Foo[str]'  # TCH008
29 29 | type E = 'Foo.bar'  # TCH008
30 30 | type G = 'OptStr'  # TCH008

TCH008.py:28:10: TCH008 [*] Remove quotes from type alias
   |
27 | type B = 'Dict'  # TCH008
28 | type D = 'Foo[str]'  # TCH008
   |          ^^^^^^^^^^ TCH008
29 | type E = 'Foo.bar'  # TCH008
30 | type G = 'OptStr'  # TCH008
   |
   = help: Remove quotes

ℹ Safe fix
25 25 | k: TypeAlias = 'k | None'  # OK
26 26 | 
27 27 | type B = 'Dict'  # TCH008
28    |-type D = 'Foo[str]'  # TCH008
   28 |+type D = Foo[str]  # TCH008
29 29 | type E = 'Foo.bar'  # TCH008
30 30 | type G = 'OptStr'  # TCH008
31 31 | type I = Foo['str']  # TCH008

TCH008.py:29:10: TCH008 [*] Remove quotes from type alias
   |
27 | type B = 'Dict'  # TCH008
28 | type D = 'Foo[str]'  # TCH008
29 | type E = 'Foo.bar'  # TCH008
   |          ^^^^^^^^^ TCH008
30 | type G = 'OptStr'  # TCH008
31 | type I = Foo['str']  # TCH008
   |
   = help: Remove quotes

ℹ Safe fix
26 26 | 
27 27 | type B = 'Dict'  # TCH008
28 28 | type D = 'Foo[str]'  # TCH008
29    |-type E = 'Foo.bar'  # TCH008
   29 |+type E = Foo.bar  # TCH008
30 30 | type G = 'OptStr'  # TCH008
31 31 | type I = Foo['str']  # TCH008
32 32 | type J = 'Baz'  # TCH008

TCH008.py:30:10: TCH008 [*] Remove quotes from type alias
   |
28 | type D = 'Foo[str]'  # TCH008
29 | type E = 'Foo.bar'  # TCH008
30 | type G = 'OptStr'  # TCH008
   |          ^^^^^^^^ TCH008
31 | type I = Foo['str']  # TCH008
32 | type J = 'Baz'  # TCH008
   |
   = help: Remove quotes

ℹ Safe fix
27 27 | type B = 'Dict'  # TCH008
28 28 | type D = 'Foo[str]'  # TCH008
29 29 | type E = 'Foo.bar'  # TCH008
30    |-type G = 'OptStr'  # TCH008
   30 |+type G = OptStr  # TCH008
31 31 | type I = Foo['str']  # TCH008
32 32 | type J = 'Baz'  # TCH008
33 33 | type K = 'K | None'  # TCH008

TCH008.py:31:14: TCH008 [*] Remove quotes from type alias
   |
29 | type E = 'Foo.bar'  # TCH008
30 | type G = 'OptStr'  # TCH008
31 | type I = Foo['str']  # TCH008
   |              ^^^^^ TCH008
32 | type J = 'Baz'  # TCH008
33 | type K = 'K | None'  # TCH008
   |
   = help: Remove quotes

ℹ Safe fix
28 28 | type D = 'Foo[str]'  # TCH008
29 29 | type E = 'Foo.bar'  # TCH008
30 30 | type G = 'OptStr'  # TCH008
31    |-type I = Foo['str']  # TCH008
   31 |+type I = Foo[str]  # TCH008
32 32 | type J = 'Baz'  # TCH008
33 33 | type K = 'K | None'  # TCH008
34 34 | 

TCH008.py:32:10: TCH008 [*] Remove quotes from type alias
   |
30 | type G = 'OptStr'  # TCH008
31 | type I = Foo['str']  # TCH008
32 | type J = 'Baz'  # TCH008
   |          ^^^^^ TCH008
33 | type K = 'K | None'  # TCH008
   |
   = help: Remove quotes

ℹ Safe fix
29 29 | type E = 'Foo.bar'  # TCH008
30 30 | type G = 'OptStr'  # TCH008
31 31 | type I = Foo['str']  # TCH008
32    |-type J = 'Baz'  # TCH008
   32 |+type J = Baz  # TCH008
33 33 | type K = 'K | None'  # TCH008
34 34 | 
35 35 | 

TCH008.py:33:10: TCH008 [*] Remove quotes from type alias
   |
31 | type I = Foo['str']  # TCH008
32 | type J = 'Baz'  # TCH008
33 | type K = 'K | None'  # TCH008
   |          ^^^^^^^^^^ TCH008
   |
   = help: Remove quotes

ℹ Safe fix
30 30 | type G = 'OptStr'  # TCH008
31 31 | type I = Foo['str']  # TCH008
32 32 | type J = 'Baz'  # TCH008
33    |-type K = 'K | None'  # TCH008
   33 |+type K = K | None  # TCH008
34 34 | 
35 35 | 
36 36 | class Baz:

TCH008.py:38:14: TCH008 [*] Remove quotes from type alias
   |
36 | class Baz:
37 |     a: TypeAlias = 'Baz'  # OK
38 |     type A = 'Baz'  # TCH008
   |              ^^^^^ TCH008
39 | 
40 |     class Nested:
   |
   = help: Remove quotes

ℹ Safe fix
35 35 | 
36 36 | class Baz:
37 37 |     a: TypeAlias = 'Baz'  # OK
38    |-    type A = 'Baz'  # TCH008
   38 |+    type A = Baz  # TCH008
39 39 | 
40 40 |     class Nested:
41 41 |         a: TypeAlias = 'Baz'  # OK

TCH008.py:42:18: TCH008 [*] Remove quotes from type alias
   |
40 |     class Nested:
41 |         a: TypeAlias = 'Baz'  # OK
42 |         type A = 'Baz'  # TCH008
   |                  ^^^^^ TCH008
   |
   = help: Remove quotes

ℹ Safe fix
39 39 | 
40 40 |     class Nested:
41 41 |         a: TypeAlias = 'Baz'  # OK
42    |-        type A = 'Baz'  # TCH008
   42 |+        type A = Baz  # TCH008
